# aiogram_bot_draft

./: .gitignore  Makefile  README.md  config_example.yml  docker-compose.yml  pyproject.toml  requirements.txt
aio/: __main__.py  handlers.py  manager.py  middlewares.py  settings.py  utils.py
core/: config.py  models.py  setup.py
migration/: env.py
migration/versions/schema/: 2026_02_23_1726-c0f9a3f5a6c0_create_tg_data_table.py
rabbit_service/: rabbit.py
rabbitmq_docker/: Dockerfile  __init__.py  init.sh
tests/: conftest.py  test_db_accessors.py  test_handlers.py
